--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <!-- <link rel="icon" href="<%= BASE_URL %>assets/logo.svg"> -->
   <link rel="icon" type="image/svg+xml" href="<%= BASE_URL %>assets/logo.svg">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff8a01">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Digytle - We build the future</title>
   <!-- Twitter Specific Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Digital Products, Transformation and Design">
@@ -31,7 +31,8 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-606cd3781f8387e0"></script>
 </body>
 
 </html>
