share-buttons-test

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff8a01">
   <title>Digytle - We build the future</title>
   <!-- Twitter Specific Tags -->
-  <!-- <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Digital Products, Transformation and Design">
   <meta name="twitter:description" content="Trusted development using disruptive technologies. We blend the best of the new with many years of experience to help you transform your offering and launch new projects. ">
-  <meta name="twitter:image" content="https://acceptance.digytle.com/assets/Social-media-card.png"> -->
+  <meta name="twitter:image" content="https://acceptance.digytle.com/assets/Social-media-card.png">
   <!-- Twitter Specific Tags -->
   <!-- LinkedIn Specific Tags -->
-  <!-- <meta name="title" property="og:title" content="Digital Products, Transformation and Design">
+  <meta name="title" property="og:title" content="Digital Products, Transformation and Design">
   <meta name="image" property="og:image" content="https://acceptance.digytle.com/assets/Social-media-card.png">
   <meta name="description" property="og:description" content="Trusted development using disruptive technologies. We blend the best of the new with many years of experience to help you transform your offering and launch new projects. ">
-  <meta name="author" content="Digytle"> -->
+  <meta name="author" content="Digytle">
   <!-- LinkedIn Specific Tags -->
 </head>
 
