--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,17 @@
   <!-- built files will be auto injected -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  <form name="asdasd" method="post" data-netlify="true" hidden>
+      <input type="hidden" name="form-name1" />
+      <input type="hidden" name="form-name2" />
+      <ul>
+          <li>
+              <input type="text" class="form-control1" placeholder="First name">
+              <input type="email" class="form-control2" placeholder="Email">
+          </li>
+      </ul>
+      <button type="submit">go</button>
+  </form>
 </body>
 
 </html>
