--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
   <form name="Contact-us" method="post" data-netlify="true">
       <input type="hidden" name="form-name" value="Contact-us" />
-      <ul>
-          <li>
-              <input type="text" class="form-control1" placeholder="First name">
-              <input type="email" class="form-control2" placeholder="Email">
-          </li>
-      </ul>
+        <input type="text" class="form-control1" placeholder="First name">
+        <input type="email" class="form-control2" placeholder="Email">
+        <input type="description" class="form-control3" placeholder="description">
       <button type="submit">go</button>
   </form>
 </body>
