--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,10 @@
     <label>Your Name: <input type="text" name="name" /></label> 
     <label>Your Surname: <input type="text" name="surname" /></label>  
     <label>Your Email: <input type="email" name="email" /></label>
-    <label>Here for:  <select name="for[]"></select></label>
+    <label>Here for:  <select name="here for"></select></label>
     <label>Message: <textarea name="text"></textarea></label>
-    <button type="submit">go</button>
+    <label>Newsletter: <input type="checkbox" name="news"></label>
+    <button type="submit">Submit my request</button>
   </form> 
 </body>
 
