--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- <link rel="icon" href="<%= BASE_URL %>assets/logo.svg"> -->
-  <link rel="icon" type="image/svg+xml" href="<%= BASE_URL %>assets/logo.svg">
+  <link rel="icon" type="image/svg+xml" href="<%= BASE_URL %>assets/flavicon.png">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff8a01">
   <title>Digytle - We build the future</title>
   <meta name="keywords" content="Digital, Digital Products, Design, Transformation, development, disruptive technologies, transform, Digytle, Tailored Solutions, Assured Quality, Digital Leadership, ">
@@ -43,10 +43,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXRZ2QJ"
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXRZ2QJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
+  <!-- Netlify forms -->
   <form name="Contact-us" netlify hidden action="src\components\submited.vue" netlify-honeypot="bot-field">
     <p class="hidden">
       <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
@@ -59,6 +60,7 @@
     <label>Newsletter: <input type="checkbox" name="news"></label>
     <button type="submit">Submit my request</button>
   </form>
+  <!-- Netlify forms -->
 </body>
 
 </html>
